<resources>
    <string name="app_name">Pet House</string>
    <string name="don_t_have_an_account_sign_up" />
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="tab_text_1">Stations</string>
    <string name="tab_text_2">Reports</string>
    <string name="title_activity_station_main">StationMainActivity</string>
    <string name="tab_text_3">Orders</string>
    <string name="tab_text_4">Data</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoibWFobW91ZDdlbGxhd2F0dHkiLCJhIjoiY2pzeW1jOTJ3MGRycTQzcXRjNHEycnExNyJ9.enxRekCKYRpiy_bpVTEl8Q</string>
    <string name="sms" />
    <string name="notifications" />
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="type_activity">Choose Type</string>
    <string name="admin_dashboard_activity">Admin Dashboard</string>
    <string name="new_product_activity">New Product</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="name">Full Name</string>
    <string name="code">Code</string>
    <string name="doctor">Doctor</string>
    <string name="subject">Subject</string>
    <string name="day">Day</string>
    <string name="from_hour">From Hour</string>
    <string name="to_hour">To Hour</string>
    <string name="hour">Hour</string>
    <string name="hall">Hall</string>
    <string name="clear">Clear Filters</string>
    <string name="search">Search</string>
    <string name="helper_text">Search by: Product name, Category, Sub-Category, Brand, Model and Year</string>
    <string name="no_data">No data with this filter!</string>
    <string name="on_map">Show On Map</string>
    <string name="add_student">Student Data</string>
    <string name="add_subject">Subject Data</string>
    <string name="add_timetable">Timetable Data</string>
    <string name="login_background">Login Description</string>
    <string name="add_hall">Hall Data</string>
    <string name="user_location_permission_not_granted">No Permission</string>
    <string name="user_location_permission_explanation">Permission</string>
    <string name="current_location">Current Location</string>
    <string name="add_doctor">Doctor Data</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="product_name">Product Name</string>
    <string name="forgot_password">forget_password</string>
    <string name="register_back_login">Have an account? Login</string>
    <string name="login_signup_hint">Create New Account</string>
    <string name="register">Register</string>
    <string name="account_info">Account Info</string>
    <string name="logout">Logout</string>
    <string name="system_data">System Data</string>
    <string name="companies">Companies Control</string>
    <string name="company_data">Company Data</string>
    <string name="system_data_description">Here you can control system data. You can add, delete and edit Categories and SubCategories. Also you could add, delete and edit Brands, Models and Model Years.</string>
    <string name="companies_request">Companies</string>
    <string name="orders">Orders</string>
    <string name="orders_description">You can observe every order customers make. And get all order information such as price, date, and status.</string>
    <string name="companies_description">You get requests when companies register. You have full control to Accept or Reject companies request. Not just that you can also deactivate any company you want at any time.</string>
    <string name="title_activity_system_data">System Data</string>
    <string name="tab_suppliers">Suppliers</string>
    <string name="tab_requests">Requests</string>
    <string name="tab_gov">Governorates</string>
    <string name="tab_type">Types</string>
    <string name="tab_cities">Cities</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_achievements">Achievements</string>
    <string name="tab_likes">Likes</string>
    <string name="tab_advisers">Advisers</string>
    <string name="tab_available">Available Groups</string>
    <string name="tab_my_groups">My Groups</string>
    <string name="no_sub_category_found">No Sub Category Found</string>
    <string name="no_models_found">No Models Found</string>
    <string name="no_years_found">No Model Years Found</string>
    <string name="name_label">Name:</string>
    <string name="reject">Reject</string>
    <string name="pay">Pay</string>
    <string name="accept">Accept</string>
    <string name="todo">TODO</string>
    <string name="customer_label">Customer Name:</string>
    <string name="product_label">Product Name:</string>
    <string name="quantity_label">Quantity = </string>
    <string name="price_label">Total Price =</string>
    <string name="waiting">Waiting For Company Response</string>
    <string name="paid">Paid Successfully</string>
    <string name="rejected">Rejected By Company</string>
    <string name="accepted">Accepted, Waiting For Payment</string>
    <string name="category_label">Category</string>
    <string name="subcategory_label">Sub Category</string>
    <string name="brand_label">Brand</string>
    <string name="model_label">Model</string>
    <string name="year_label">Year</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order Now</string>
    <string name="product_image">Product Image</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="rate">Rate</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="received_this_order">Received This Order</string>
    <string name="write_your_comment">write your comment...</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="headline">Headline</string>
    <string name="bio">Bio</string>
    <string name="classes">Classes</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="title_activity_teacher_dashboard">Teacher Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="my_courses">My Courses</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="chapters">Chapters</string>
    <string name="add_chapter">Add Chapter</string>
    <string name="no_chapter_found">No Chapter Found</string>
    <string name="kwd">KWD</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="chapter_items">Chapter Items</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="no_items_found">No Items Found</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="add_video_url">Add Video Url</string>
    <string name="add_pdf_file">Add Pdf File</string>
    <string name="add_file">Add File</string>
    <string name="file_name">File Name:</string>
    <string name="youtube_video_url">Youtube Video Url</string>
    <string name="lesson_notes">Lesson Notes</string>
    <string name="by">By:</string>
    <string name="description">Description</string>
    <string name="pay_this_course">Pay This Course</string>
    <string name="download_file">Download File</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="questions">Questions</string>
    <string name="add_question">Add Question</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="no_questions_found">No Questions Found</string>
    <string name="trial_quiz">Trial Quiz, this quiz will start as trial and no answer will be provide because you\'re not student.</string>
    <string name="question_text">Question Text</string>
    <string name="question_type">Question Type</string>
    <string name="question_point">Question Point</string>
    <string name="choices">Choices</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="allow_student">Allow student to upload a file with their answer</string>
    <string name="write_a_choice">write a choice</string>
    <string name="quiz_answers">Quiz Answers</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="title_activity_student_dashboard">MainActivity</string>
    <string name="admin">Admin</string>
    <string name="adviser">Adviser</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="smoking">Smoking</string>
    <string name="alcohol">Alcohol</string>
    <string name="gender">Gender</string>
    <string name="addiction_type">Addiction Type</string>
    <string name="drugs">Drugs</string>
    <string name="birth_date">Birth Date</string>
    <string name="profile_image">Profile Image</string>
    <string name="quit_date">Quit Date</string>
    <string name="did_you_quit">Have you quited?</string>
    <string name="qualifications_images">Qualifications Images</string>
    <string name="add_qualification">Add Qualification</string>
    <string name="apply_adviser">Apply to be an adviser</string>
    <string name="system_control">System Control</string>
    <string name="review">Review</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtitle">Subtitle</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="write_a_comment">write a comment</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="groups">Groups</string>
    <string name="post">Post</string>
    <string name="achievement">Achievement</string>
    <string name="add_photo">Add Photo</string>
    <string name="what_s_on_your_mind">What is on your mind?</string>
    <string name="what_have_you_achieved">What have you achieved?</string>
    <string name="no_posts_found">No Posts Found!</string>
    <string name="title_activity_test">ScrollingActivity</string>
    <string name="reset">Reset</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="_00966_5" translatable="false">+965</string>
    <string name="send_code">Send code</string>
    <string name="enter_the_code">We sent you a code to your phone, Enter it.</string>
    <string name="phonelock" translatable="false">phonelock</string>
    <string name="forget_password2">Forget Password?</string>
    <string name="otp_hint">Enter the code…</string>
    <string name="verify">Verify</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="governorate">Governorate</string>
    <string name="city">City</string>
    <string name="no_data_found">No Data Found!</string>
</resources>