<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    android:background="@drawable/bg1"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".activities.owener.fragment.OwenerHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/governorate_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/colorPrimaryVeryDark">

            <AutoCompleteTextView
                android:id="@+id/governorate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/governorate"
                android:inputType="none"
                android:textCursorDrawable="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/colorPrimaryVeryDark">

            <AutoCompleteTextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="none"
                android:textCursorDrawable="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/no_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textColor="@color/colorPrimaryVeryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"/>


</LinearLayout>