<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.ResetPasswordActivity"
    android:theme="@style/Theme.MaterialComponents.Light"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/phonelock"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/forget" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/new_password"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/icon"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/confirm_password"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/pass"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/reset"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimaryMidDark"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/reset"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/confirm_pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>